--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <li><a href="#PRESENTACION">Presentación</a></li>
           <li><a href="#FORMACION">Educación</a></li>
           <li><a href="#CONOCIMIENTOS-ADQUIERIDOS">Conocimientos</a></li>
+                    <li><a href="download/1023-1241.pdf">Curriculum PDF</a></li>
         </ul>
       </nav>
     </header>
@@ -52,7 +53,7 @@
               <li>CAPACIDAD DE ANÁLISIS Y RESOLUCIÓN DE PROBLEMAS</li>
               <li>AUTOMOTIVACIÓN</li>
               <li>ADAPTABILIDAD</li>
-              <li>DILIGECIA</li>
+              <li>DILIGENCIA</li>
               <li>AFINIDAD POR EL TRABAJO EN EQUIPO</li>
             </ul>
               <h4>Descargar Curriculum:</h4>
